--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+main{
+    background-color: black;
+    width: 150px;
+    color: white;
+    height: 150px;
+    margin-left: 32px;
+    padding: 10px;
+}
