--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,12 @@
 /* Your CSS Code here. */
 main{
     background-color: black;
-    width: 150px;
-    color: white;
     height: 150px;
+    width: 150px;
+    
+}
+.hello-accio-job{
+    color: white;
     margin-left: 32px;
     padding: 10px;
 }
