--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
-
 /* Your CSS Code here. */
-.Accio#Job{
-    background-color: black;
-    height: 150px;
-    width: 150px;
-    
+.Accio {
+  background-color: black;
+  height: 150px;
+  width: 150px;
 }
-p{
-    color: white;
-    margin-left: 32px;
-    padding: 10px;
+p {
+  color: white;
+  margin-left: 32px;
+  padding: 10px;
 }
